--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 img {
-    height: 10%; 
-    width: 10%;
+    height: 25%; 
+    width: 25%;
     }
     body {
         background: mintcream;
@@ -15,3 +15,84 @@ img {
     h4 {
         font-family: 'Audiowide', cursive;   
     }
+    @media (min-width: 320px){
+        img {
+            height: 10%;
+            width: 10%;
+        }
+    }
+        @media (min-width: 375px) {
+
+            img {
+                height: 100%;
+                width: 100%;
+            }
+        }
+        @media (min-width: 425px) {
+
+            img {
+                height: 100%;
+                width: 100%;
+            }
+     
+        }
+        @media (min-width: 576px) {
+
+            img {
+                height: 100%;
+                width: 100%;
+            }
+        }
+        
+        @media (min-width: 768px) {
+
+            img {
+                height: 50%;
+                width: 50%;
+            }
+            h4 {
+                font-size: 3rem;
+            }
+            h1{
+                font-size: 4rem;
+            }
+            h2{
+                font-size: 3rem;
+            }
+        
+        }
+        
+        @media (min-width: 992px) {
+
+            img {
+                height: 25%;
+                width: 25%;
+            }
+            h4 {
+                font-size: 1rem;
+            }
+            h1{
+                font-size: 2rem;
+            }
+            h2{
+                font-size: 1rem;
+            }
+        }
+
+        @media (min-width: 1200px) {
+
+            img {
+                height: 20%;
+                width: 20%;
+            }
+            h4 {
+                font-size: 1.5rem;
+            }
+            h1{
+                font-size: 3rem;
+            }
+            h2{
+                font-size: 1.5rem;
+            }
+
+        }
